<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.6.9</version>
        <relativePath/>
    </parent>

    <groupId>ru.skubatko.dev.topjava</groupId>
    <artifactId>parent</artifactId>
    <version>${revision}</version>
    <name>TopJava personal project</name>
    <packaging>pom</packaging>

    <modules>
        <module>api</module>
        <module>client</module>
        <module>common</module>
        <module>service</module>
        <module>sonar</module>
    </modules>

    <properties>
        <revision>1.0.0</revision>

        <java.version>17</java.version>

        <jacoco-maven-plugin.version>0.8.7</jacoco-maven-plugin.version>
        <openapi-generator-maven-plugin.version>5.0.0</openapi-generator-maven-plugin.version>

        <jackson.version>2.12.1</jackson.version>
        <jackson-databind-nullable.version>0.2.1</jackson-databind-nullable.version>
        <swagger-annotations.version>1.6.1</swagger-annotations.version>
        <springfox.version>3.0.0</springfox.version>
        <springdoc.version>1.6.9</springdoc.version>
        <jsoup.version>1.14.2</jsoup.version>
        <mapstruct.version>1.4.1.Final</mapstruct.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>ru.skubatko.dev.topjava</groupId>
                <artifactId>api</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>ru.skubatko.dev.topjava</groupId>
                <artifactId>db</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>ru.skubatko.dev.topjava</groupId>
                <artifactId>client</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>ru.skubatko.dev.topjava</groupId>
                <artifactId>common</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>ru.skubatko.dev.topjava</groupId>
                <artifactId>service</artifactId>
                <version>${revision}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <argLine>-Djava.net.preferIPv4Stack=true</argLine>
                        <argLine>--illegal-access=permit</argLine>
                        <argLine>${surefireArgLine}</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco-maven-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.2.7</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <propertyName>surefireArgLine</propertyName>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
